@@ -13,5 +13,12 @@
 	<string id="30035">5%</string>
 	<string id="30036">1%</string>
 	<string id="30037">Downloads</string>
+	<string id="30050">Video quality</string>
+	<string id="30051">Always ask</string>
+	<string id="30052">Best</string>
+	<string id="30053">Worst</string>
+	<string id="30054">720p</string>
+	<string id="30055">480p</string>
+	<string id="30056">360p</string>
 	<string id="31000">Usage of plugin is tracked whenever you play or download video.</string>
 </strings>
