@@ -1,3 +1,6 @@
+[B]1.1.5:[/B]
+- oprava nefuknčního přehrávání, pokud některý ze zdrojů na stránce je chybový #50
+- přidaná možnost volit kvalitu přehrávání - default : Zeptat se
 [B]1.1.4:[/B]
 - oprava zmrvených náhledů seriálů pod windows #44
 [B]1.1.3:[/B]
